src/style/front-end/components/navigation.scss
/* ... */
.header {
  a{
    font-weight:400;
  }
  &--global {
    @include touch {
      display: flex;
      flex-direction: column;
      background: white;
    }
    .purdue-navbar-black {
      padding: 1rem $side-padding-desktop;
      @include touch {
        padding: 1rem $side-padding-tablet;
      }
      @include mobile {
        padding: 1rem $side-padding-mobile;
      }
      #blackBarMenu {
        margin-left: -1.4rem;
        align-items: stretch;
        .sr-only-lg {
          display: none;
          @include touch {
            display: block;
            font-family: $acumin-pro-semicondensed;
            font-size: 1rem;
            color: $aged-gold;
            margin-bottom: 0.5rem;
          }
        }
        .navbar-item {
          padding: 0.5rem 1.4rem;
          &:not(:last-child) {
            &:after {
              content: '';
              position: absolute;
              right: 0;
              top: 25%;
              width: 1px;
              height: 60%;
              background: white;
            }
          }
          a {
            color: white;
            @include touch {
              color: black;
            }
          }
        }
        .navbar-start {
          margin-right: 2rem;
          @include touch {
            margin: 0;
            display: flex;
            flex-direction: column;
            flex-wrap: wrap;
            height: 7.5rem;
            .navbar-item {
              padding: 0.5rem 0 0.5rem 0.5rem;
              display: flex;
              align-items: center;
              flex-direction: row;
              &:before {
                font-family: 'Font Awesome 5 Free';
                font-size: 10px;
                font-weight: 900;
                content: '\f054';
                position: absolute;
                left: 0;
                margin-top: 2px;
                color: black !important;
              }

            }
          }
        }
        .navbar-end {
          margin-left: 0;
          flex: 1 0 auto;
          .search-box {
            margin: 0;
            width: 100%;
            input {
              width: 100%;
              height: 100%;
            }
          }
          .search-button {
            padding: 0 1rem;
            background-color: $boiler-gold;
          }
          @include touch {
            display: none;
          }
        }
        @include touch {
          display: block;
          width: 100%;
          box-shadow: none;
          height: auto;
          margin: 0;
          padding: 1rem;
        }
      }
      @include touch {
        order: 2;
        display: none;
        background: white;
        padding: 0;
        &.is-active {
          display: flex;
        }
      }
    }
    .purdue-navbar-white {
      padding: 0 $side-padding-desktop;
      @include touch {
        order: 1;
        display: flex;
        flex-direction: column;
        background: white !important;
        padding: 0 $side-padding-tablet;
      }
      @include mobile {
        padding: 0 $side-padding-mobile;
      }
    }
    .navbar {
      &--global {
        .navbar-brand {
          margin-right: 3.375rem;
          .navbar-item {
            padding: 1.5rem 0;
            img {
              max-height: 3rem;
              height: 3rem;
            }
            border: none;
          }
          .icon {
            display: none;
            background: none;
            border: none;
            @include touch {
              display: block;
              &:hover {
                cursor: pointer;
              }
            }
            .burger-icon{
              display:block;
              font-size:2em;
              width:1.5em;
            }
            .close-icon{
              display:none;
              font-size:2.2em;
              width:1.5em;
            }
          }
          @include touch {
            margin: 0;
            display: flex;
            align-items: center;
            justify-content: space-between;
          }
        }
        .navbar-start {
          .navbar-item {
            a {
              font-family: $acumin-pro-condensed;
              font-weight: 700;
              @include touch {
                color: black;
                font-weight: 400;
                font-size: 1.5rem;
                &.navbar-link {
                  &:after {
                    display: none;
                  }
                }
              }
            }
            @include touch {
              border: none;
              padding: 0.6rem 0;
              position: relative;
              display: flex;
              align-items: center;
            }
          }
          @include touch {
            display: none;
            &.is-active {
              display: block;
            }
          }
        }
        @include touch {
          padding: 0 1rem;
        }
      }
    }
  }
}

